[project]
name = "q-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alpaca-trade-api>=0.48",
    "backtrader>=1.9.78.123",
    "beautifulsoup4>=4.14.3",
    "bokeh>=3.8.2",
    "joblib>=1.5.3",
    "kaleido>=1.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "pyecharts>=2.0.9",
    "pyfolio>=0.9.2",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "tqdm>=4.67.1",
    "tushare>=1.4.24",
    "xlsxwriter>=3.2.9",
    "yfinance>=1.0",
]
